--- a/src/app/admin/component/follow-links/follow-links.component.html
+++ b/src/app/admin/component/follow-links/follow-links.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="container mt-3 col-lg-6 col-sm-12">
+<div class="container mb-7 col-lg-6 col-sm-12" style="margin-top: 131px;">
     <table class="table table-striped">
       <thead>
         <tr>
@@ -24,9 +24,9 @@
             <th>{{links.links.phone}}</th>
           </tr>
           <tr>
-            <th>الشعار</th>
+            <!-- <th>الشعار</th>
             <th><img [src]=links.links.logo  width="200px" height="200px" ></th>
-          </tr>
+          </tr> -->
       </thead>
     </table>
     <button class="send" style="width: 100%;height: 42px; padding: 0px;" (click)="updateLinks(links.links.id)">تعديل</button>
