--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!loading" class=" mt-5">
+<div *ngIf="!loading" >
     <div class="search ">
         <div class="mb-5">
             <h2> معنا الايجار أسهل </h2>
