--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -40,10 +40,9 @@ mat-divider {
     background-color: rgba(255, 255, 255, 0.5);
 }
 .navbar-brand{
-    font-size: larger;
-    color: #F89406;
+    font-size: 2rem;
+    color: #FE6F41;
     font-weight: bold;
-    font-style: italic;
      
 }
 ul li a {
