--- a/src/app/auth/component/login/login.component.html
+++ b/src/app/auth/component/login/login.component.html
@@ -1,20 +1,21 @@
 <section class="h-100 gradient-form">
-  <div class="container mt-4 py-5 h-100">
-    <div class="row justify-content-center align-items-center">
-      <div class="col-xl-10">
-        <section class="card rounded-3 text-black">
-          <div class="row justify-content-center g-0">
-            <div class="col-lg-6">
-              <div class="card-body p-md-5 mx-md-4">
-                <div class="text-center">
-                  <h4 class="mt-3 mb-5 pb-1 header">تسجيل الدخول</h4>
-                </div>
+    <div class="container mt-4 py-5 h-100">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-xl-10">
+                <section class="card rounded-3 text-black">
+                    <div class="row justify-content-center g-0">
+                        <div class="col-lg-6">
+                            <div class="card-body p-md-5 mx-md-4">
+                                <div class="text-center">
+                                    <h4 class="mt-3 mb-5 pb-1 header">تسجيل الدخول</h4>
+                                </div>
 
-                <form [formGroup]="loginForm">
-                  <div *ngIf="!errorstatus"><p class="text-center text-danger">عفوا لقد ادخلت بيانات غير صحيحة</p></div>
-                  <div class="form-outline mb-4">
-                    <label class="form-label d-flex" for="email"
-                      >البريد الالكترونى</label
+                                <form [formGroup]="loginForm">
+                                    <div *ngIf="!errorstatus">
+                                        <p class="text-center text-danger">عفوا لقد ادخلت بيانات غير صحيحة</p>
+                                    </div>
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label d-flex" for="email">البريد الالكترونى</label
                     >
                     <input
                       type="email"
@@ -129,22 +130,17 @@
                       (change)="onclick($event)"
                     />
                     <label>تذكرنى</label>
-                    <!-- {{ loginForm.value.rememberMe }} -->
-                  </div>
-                  <div class="pt-1 mb-4">
-                    <button
-                      class="send fa-lg mb-3 form-control"
-                      type="submit"
-                      (click)="login()"
-                    >
+                                        <!-- {{ loginForm.value.rememberMe }} -->
+                                    </div>
+                                    <div class="pt-1 mb-4">
+                                        <button class="send fa-lg mb-3 form-control" type="submit" (click)="login()">
                       تسجيل دخول
                     </button>
-                  </div>
-                  <div class="d-flex" style="justify-content: space-between">
-                    <p class="" style="color: #393f81">
-                      ليس لدى حساب؟
-                      <a routerLink="/register" style="color: #393f81"
-                        >التسجيل</a
+                                    </div>
+                                    <div class="d-flex" style="justify-content: space-between">
+                                        <p class="" style="color: #393f81">
+                                            ليس لدى حساب؟
+                                            <a routerLink="/register" style="color: #393f81">التسجيل</a
                       >
                     </p>
                     <p>
