--- a/src/app/admin/component/admins/admins.component.html
+++ b/src/app/admin/component/admins/admins.component.html
@@ -12,7 +12,7 @@
             <!-- Position Column -->
             <ng-container matColumnDef="id">
               <th mat-header-cell *matHeaderCellDef mat-sort-header ></th> 
-              <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+              <td mat-cell *matCellDef="let element ; let i =index;"> {{i+1}} </td>
             </ng-container>
         
             <!-- Name Column -->
