--- a/src/app/auth/component/mailwithcode/mailwithcode.component.html
+++ b/src/app/auth/component/mailwithcode/mailwithcode.component.html
@@ -1,6 +1,6 @@
-<section class="mt-5 gradient-form">
-  <div class="container mt-5 py-5">
-    <div class="row mt-5 h-100">
+<section class="mt-5 gradient-form" >
+  <div class="container mt-5 py-5" >
+    <div class="row mt-5 h-100 justify-content-center">
       <div class="col-xl-10">
         <section class="card rounded-3 text-black">
           <div class="row justify-content-center g-0">
