--- a/src/app/shared/component/editpersonaldata/editpersonaldata.component.html
+++ b/src/app/shared/component/editpersonaldata/editpersonaldata.component.html
@@ -1,6 +1,6 @@
 <div
   class="d-flex justify-content-center"
-  style="height: 100vh; margin-top: 70px"
+  style="height: 100vh; margin-top: 70px !important"
 >
   <div class="container">
     <form
@@ -29,10 +29,10 @@
             >الاسم مطلوب</strong
           >
           <strong *ngIf="form.controls['name'].errors['minlength']">
-            الاسم يجب الا يقل عن حرفان</strong
+            الاسم يجب الا يقل عن خمسة احرف</strong
           >
           <strong *ngIf="form.controls['name'].errors['maxlength']">
-            الاسم يجب الا يزيد عن عشرة احرف</strong
+            الاسم يجب الا يزيد عن عشرين حرفا</strong
           >
           <strong *ngIf="form.controls['name'].errors['pattern']">
             الاسم حروف عربية او انجليزية فقط</strong
